<resources>
    <string name="app_name">Calculadora Notas</string>
    <string name="qtde_faltas">Faltas</string>
    <string name="nome_do_aluno">Nome do Aluno</string>
    <string name="nome_da_disciplina">Nome da Disciplina</string>
    <string name="calculadora_notas_app">Calculadora Notas App</string>
    <string name="nota_atividade_1">Nota Atividade 1</string>
    <string name="nota_atividade_2">Nota Atividade 2</string>
    <string name="nota_prova">Nota prova</string>
    <string name="avaliar">Avaliar</string>
    <string name="limpar">Limpar</string>
    <string name="deslogar">Deslogar</string>

</resources>